add routes generes
