# storage/api-docs/api-docs.json
@@ -187,6 +187,60 @@
                 }
             }
         },
+        "/api/juegos/generos/show/all": {
+            "get": {
+                "tags": [
+                    "Generos"
+                ],
+                "summary": "Obtener todos los generos",
+                "description": "Muestra la información de todos los generos que se encuentran insertados en la base de datos.",
+                "operationId": "getAllGeneros",
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "401": {
+                        "description": "No autorizado"
+                    },
+                    "500": {
+                        "description": "Error interno del servidor"
+                    }
+                }
+            }
+        },
+        "/api/juegos/generos/{slug}": {
+            "get": {
+                "tags": [
+                    "Generos"
+                ],
+                "summary": "Obtener los juegos de un genero",
+                "description": "Muestra la información de los juegos que pertenece a un genero en especifico segun el valor del parametro slug.",
+                "operationId": "getGenero",
+                "parameters": [
+                    {
+                        "name": "slug",
+                        "in": "path",
+                        "description": "Url del nombre del genero",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "carreras"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "401": {
+                        "description": "No autorizado"
+                    },
+                    "500": {
+                        "description": "Error interno del servidor"
+                    }
+                }
+            }
+        },
         "/api/juegos": {
             "get": {
                 "tags": [
@@ -564,6 +618,24 @@
                 "type": "object",
                 "xml": {
                     "name": "Desarrolladora"
+                }
+            },
+            "Genero": {
+                "properties": {
+                    "nombre": {
+                        "description": "Nombre del genero",
+                        "type": "string",
+                        "example": "Rpg de Acción"
+                    },
+                    "slug": {
+                        "description": "Url amigable del nombre del genero",
+                        "type": "string",
+                        "example": "rpg-de-accion"
+                    }
+                },
+                "type": "object",
+                "xml": {
+                    "name": "Genero"
                 }
             },
             "Juego": {
